2단계 계산기 구현 완료
게터 및 세터 메서드를 사용할 수 있도록 구현 완료